k8s/affinity-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-affinity
  namespace: devops-lab

spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd

  containers:
  - name: nginx
    image: nginx
