k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: nginx-daemonset
  namespace: devops-lab

spec:
  selector:
    matchLabels:
      app: nginx-daemon

  template:
    metadata:
      labels:
        app: nginx-daemon

    spec:
      containers:
      - name: nginx
        image: nginx
