k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: webapp-deployment
  namespace: devops-lab

spec:
  replicas: 2

  selector:
    matchLabels:
      app: webapp

  template:
    metadata:
      labels:
        app: webapp

    spec:
      containers:
      - name: webapp

        image: learnshrayank/k8s-production-website:v1

        ports:
        - containerPort: 80

        volumeMounts:
        - name: webapp-storage
          mountPath: /data

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

      volumes:
      - name: webapp-storage
        persistentVolumeClaim:
          claimName: webapp-pvc
