k8s/toleration-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-toleration
  namespace: devops-lab

spec:
  containers:
  - name: nginx
    image: nginx

  tolerations:
  - key: "app"
    operator: "Equal"
    value: "critical"
    effect: "NoSchedule"
