k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: webapp-service
  namespace: devops-lab

spec:
  selector:
    app: webapp

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
